--- a/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
@@ -12,8 +12,8 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/SSRTUPageStyle.xaml" />
-
+                <!--<ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/SSRTUPageStyle.xaml" />-->
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ProfilePageStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}" >
                 <Setter Property="FontWeight" Value="Light"/>
@@ -31,6 +31,7 @@
                     </Trigger>
                 </Style.Triggers>
             </Style>
+
         </ResourceDictionary>
     </Page.Resources>
     <Grid >
@@ -76,12 +77,12 @@
         </TabControl>
         <Grid Grid.Row="3" Margin="50,38,50,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"  />
@@ -99,13 +100,13 @@
             <TextBlock Grid.Column="1" Grid.Row="2" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}" 
                        Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply2}" HorizontalAlignment="Right"/>-->
 
-            <TextBlock Grid.Column="0" Grid.Row="0" Text="Ток утечки на выходе, мА" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputLeakageCurrent, Converter={StaticResource B2V}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="0" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputLeakageCurrent, Converter={StaticResource B2V}}" 
-                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+            <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Content="Ток утечки на выходе, мА" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputLeakageCurrent, Converter={StaticResource B2V}}"/>
+            <Label Grid.Column="1" Grid.Row="0" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputLeakageCurrent, Converter={StaticResource B2V}}" 
+                       Content="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
 
-            <TextBlock Grid.Column="0" Grid.Row="1" Text="Выходное остаточное напряжение, мВ" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputResidualVoltage, Converter={StaticResource B2V}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputResidualVoltage, Converter={StaticResource B2V}}" 
-                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+            <Label Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="1" Content="Выходное остаточное напряжение, мВ" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputResidualVoltage, Converter={StaticResource B2V}}"/>
+            <Label Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowOutputResidualVoltage, Converter={StaticResource B2V}}" 
+                       Content="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
 
             <Grid Grid.Row="2" Grid.ColumnSpan="2" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowInputOptions, Converter={StaticResource B2V}}">
                 <Grid.ColumnDefinitions>
@@ -116,27 +117,27 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Column="0" Grid.Row="0" Text="Ток входа, мА" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowVoltage, Converter={StaticResource B2V}}"/>
-                <TextBlock Grid.Column="1" Grid.Row="0" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowVoltage, Converter={StaticResource B2V}}" 
-                           Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+                <Label Grid.Column="0" Grid.Row="0" Content="Ток входа, мА" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowVoltage, Converter={StaticResource B2V}}"/>
+                <Label Grid.Column="1" Grid.Row="0" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowVoltage, Converter={StaticResource B2V}}" 
+                           Content="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
 
-                <TextBlock Grid.Column="0" Grid.Row="1" Text="Напряжение входа, мВ" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAmperage, Converter={StaticResource B2V}}"/>
-                <TextBlock Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAmperage, Converter={StaticResource B2V}}" 
-                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+                <Label Grid.Column="0" Grid.Row="1" Content="Напряжение входа, мВ" Margin="0,0,0,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAmperage, Converter={StaticResource B2V}}"/>
+                <Label Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAmperage, Converter={StaticResource B2V}}" 
+                       Content="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.Result, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
             </Grid>
 
 
-            <TextBlock Grid.Column="0" Grid.Row="3" Text="Сопротивление в открытом состоянии, Ом" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2V}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="3" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2V}}" 
-                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.OpenResistance, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+            <Label Grid.Column="0" Grid.ColumnSpan="5"  Grid.Row="3" Content="Сопротивление в открытом состоянии, Ом" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2V}}"/>
+            <Label Grid.Column="1" Grid.Row="3" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2V}}" 
+                       Content="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.OpenResistance, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
 
-            <TextBlock Grid.Column="0" Grid.Row="4" Text="Ток вспомогательного питания 1, мА" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent1, Converter={StaticResource B2V}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="4" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent1, Converter={StaticResource B2V}}" 
-                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply1, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+            <Label Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="4" Content="Ток вспомогательного питания 1, мА" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent1, Converter={StaticResource B2V}}"/>
+            <Label Grid.Column="1" Grid.Row="4" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent1, Converter={StaticResource B2V}}" 
+                       Content="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply1, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
 
-            <TextBlock Grid.Column="0" Grid.Row="5" Text="Ток вспомогательного питания 2, мА" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent2, Converter={StaticResource B2V}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="5" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent2, Converter={StaticResource B2V}}" 
-                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply2, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
+            <Label Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="5" Content="Ток вспомогательного питания 2, мА" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent2, Converter={StaticResource B2V}}"/>
+            <Label Grid.Column="1" Grid.Row="5" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliarySupplyCurrent2, Converter={StaticResource B2V}}" 
+                       Content="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.AuxiliaryCurrentPowerSupply2, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
             
             <!--<TextBlock Grid.Column="0" Grid.Row="4" TextWrapping="Wrap">
                 Ток вспом. питания 1, мА
