--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
@@ -37,7 +37,11 @@
     <Label Grid.Column="0" Grid.Row="1" Content="Напр. управления, мВ" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1"  Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" Value="{Binding ControlVoltage, Converter={StaticResource DML}}" />
 
-    <Label Grid.Column="0" Grid.Row="2"  Content="Тип ком. напряж. при измер. утечки"/>
+    <Label Grid.Column="0" Grid.Row="2" >
+        <TextBlock>
+            Тип ком. напряж. <LineBreak/>при измер. утечки
+        </TextBlock>
+    </Label>
     <ComboBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding Source={StaticResource ApplicationPolarityConstantSwitchingVoltage}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding ApplicationPolarityConstantSwitchingVoltage}"  />
 
     <!--<Label Grid.Column="0" Grid.Row="3" Content="Ком. ток, мА" ></Label>
@@ -56,13 +60,21 @@
     <Label Grid.Column="3" Grid.Row="1" Content="Ток управления, мА" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}"/>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="1" Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}" Value="{Binding ControlCurrent, Converter={StaticResource DML}}"  />
 
-    <Label  Grid.Column="3" Grid.Row="2"  Content="Полярность прил. пост. ком. напр." Visibility="{Binding PolarityDCSwitchingVoltageApplicationIsVisible, Converter={StaticResource B2V}}"/>
+    <Label  Grid.Column="3" Grid.Row="2"  Visibility="{Binding PolarityDCSwitchingVoltageApplicationIsVisible, Converter={StaticResource B2V}}">
+        <TextBlock>
+                Полярность прил.<LineBreak/>пост. ком. напр.
+        </TextBlock>
+    </Label>
     <ComboBox Grid.Column="4" Grid.Row="2"  Visibility="{Binding PolarityDCSwitchingVoltageApplicationIsVisible, Converter={StaticResource B2V}}"
               ItemsSource="{Binding Source={StaticResource PolarityDCSwitchingVoltageApplication}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding PolarityDCSwitchingVoltageApplication}"/>
 
 
-    <!--<Label Grid.Column="3" Grid.Row="3" Content="Ком. напр., мВ" />
-    <customControls:NumericUpDown Grid.Column="4" Grid.Row="3"   Value="{Binding SwitchedVoltage, Converter={StaticResource DML}}"   />-->
+    <Label Grid.Column="0" Grid.Row="3" >
+        <TextBlock>
+            Комм. <LineBreak/>напряжение, мВ
+        </TextBlock>
+    </Label>
+    <customControls:NumericUpDown Grid.Column="1" Grid.Row="3"   Value="{Binding SwitchedVoltage, Converter={StaticResource DML}}"   />
 
     <Label Grid.Column="3" Grid.Row="4"  Visibility="{Binding ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}">
         <TextBlock>
@@ -71,8 +83,9 @@
     </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="4" Visibility="{Binding ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}"  Value="{Binding AuxiliaryVoltagePowerSupply2, Converter={StaticResource DML}}"   />
 
+    
 
-    <Grid Grid.Row="5" Grid.ColumnSpan="5" Margin="0,24,0,0" Visibility="{Binding HideMinMax, Converter={StaticResource B2VI}}">
+    <Grid Grid.Row="5" Grid.ColumnSpan="5" Margin="0,24,0,0" Visibility="{Binding IsProfileStyle, Converter={StaticResource B2V}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"  />
             <ColumnDefinition Width="1.1*" />
@@ -91,5 +104,26 @@
         <customControls:NumericUpDown Grid.Column="4"   Value="{Binding LeakageCurrentMaximum, Converter={StaticResource DML}}"  />
         
     </Grid>
-    
+
+    <Grid Grid.Row="5" Grid.ColumnSpan="5" Margin="0,24,0,0" Visibility="{Binding IsProfileStyle, Converter={StaticResource B2VI}}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"  />
+            <ColumnDefinition Width="1.1*" />
+            <ColumnDefinition Width="30" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="1.1*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+
+        <Label Grid.Column="0" >
+            <TextBlock>
+                Ограничение по<LineBreak/>току утечки, мА
+            </TextBlock>
+        </Label>
+        <customControls:NumericUpDown Grid.Column="1"   Value="{Binding LeakageCurrentMaximum, Converter={StaticResource DML}}"  />
+
+    </Grid>
+
 </Grid>
